# Fake-News-Detector

./: .gitignore  DEPLOY.md  README.md
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  api.py
backend/include/: classifier.hpp  onnx_model.hpp  tokenizer.hpp
backend/model/: config.json
backend/src/: classifier.cpp  main.cpp  onnx_model.cpp  tokenizer.cpp
backend/training/: export_onnx.py  parity_test.py  prepare_data.py  train_transformer.py
ui/: README.md  package-lock.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/news/: route.ts
ui/app/components/: AnalyzeSheet.tsx  CategoryBar.tsx  NewsCard.tsx  NewsFeed.tsx  RatingBadge.tsx
ui/lib/: news.ts  types.ts
